# Mesh_optimization

./: .gitmodules  CMakeLists.txt  README.md  cgal_mesh_optimizer.py  example_extended.py  example_numpy.py  optimize_mesh.py  test.py
.github/workflows/: continuous.yml
CGAL/: CMakeLists.txt  cgal_offset_computation.cpp
Cinolib/: CMakeLists.txt  cinolib_smooth.cpp
Mesh_optimization/: Mesh_conformal_optimizer.h  default_shapes.h  mesh_representations.h
Mesh_optimization/internal/: Function_minimizer.h  Mesh_conformal_optimizer_impl.hpp  Tetrahedral_conformal_optimizer.h  math_functions.h
Mesh_optimization/internal/LBFGS-Lite/: CMakeLists.txt
Mesh_optimization/internal/LBFGS-Lite/include/: lbfgs.hpp
Mesh_optimization/internal/utils/: colorized_text.h  log_time.h
data/: 43149.off  bunny.mesh  bunny_handles.txt  fandisk_kenshi_hexmesh.mesh  sphere.mesh  stairs.off
examples/: CMakeLists.txt  README.md
examples/geogram/: CMakeLists.txt  geogram_smooth.cpp
libigl/: CMakeLists.txt  libigl_handle_deformation.cpp
src/: cgal_mesh_optimization_interface.cpp
